--- a/TraMaAuth_Test/TraMaAuth_Test.csproj
+++ b/TraMaAuth_Test/TraMaAuth_Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="WorkerAuthenticatorTester.cs" />
     <Compile Include="UserAuthenticatorTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
