--- a/TraMaAuth/TraMaAuth.csproj
+++ b/TraMaAuth/TraMaAuth.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Config\ConfigurationHandler.cs" />
     <Compile Include="Crypto\PasswordManager.cs" />
     <Compile Include="Enums\Enums.cs" />
+    <Compile Include="Exceptions\ExceptionBuilder.cs" />
+    <Compile Include="Exceptions\DbException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -58,6 +60,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>UsersDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Roles\Role.cs" />
+    <Compile Include="Roles\Roles.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Users\UserAuthenticator.cs" />
     <Compile Include="DataSets\WorkersDataSet.Designer.cs">
