--- a/TraMaAuth/TraMaAuth.csproj
+++ b/TraMaAuth/TraMaAuth.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="Workers\Worker.cs" />
     <Compile Include="Workers\WorkerAuthenticator.cs" />
+    <Compile Include="Workers\Workers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
