--- a/TraMaAuth/TraMaAuth.csproj
+++ b/TraMaAuth/TraMaAuth.csproj
@@ -69,6 +69,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>WorkersDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Users\Users.cs" />
     <Compile Include="Workers\Worker.cs" />
     <Compile Include="Workers\WorkerAuthenticator.cs" />
     <Compile Include="Workers\Workers.cs" />
