Aggiunto package TraMaCore.Utilities

--- a/TraMaAuth/TraMaAuth.csproj
+++ b/TraMaAuth/TraMaAuth.csproj
@@ -30,6 +30,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cizeta.Cryptography, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\Cizeta.Cryptography.dll</HintPath>
+    </Reference>
+    <Reference Include="Cizeta.EthernetCom, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\Cizeta.EthernetCom.dll</HintPath>
+    </Reference>
+    <Reference Include="Cizeta.EventLogger, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\Cizeta.EventLogger.dll</HintPath>
+    </Reference>
+    <Reference Include="Cizeta.SerialCom, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\Cizeta.SerialCom.dll</HintPath>
+    </Reference>
+    <Reference Include="Cizeta.TraMa2RAD, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\Cizeta.TraMa2RAD.dll</HintPath>
+    </Reference>
+    <Reference Include="Cizeta.XmlSerializer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\Cizeta.XmlSerializer.dll</HintPath>
+    </Reference>
+    <Reference Include="LasRetrievingData, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\LasRetrievingData.dll</HintPath>
+    </Reference>
+    <Reference Include="S7TIAHandler, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cizeta.TraMaCore.Utilities.1.0.0\lib\v4.7.2\S7TIAHandler.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -75,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -101,12 +126,6 @@
     <None Include="WorkersDataSet.xss">
       <DependentUpon>WorkersDataSet.xsd</DependentUpon>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Lib\Cryptography\Cryptography\Cryptography.vbproj">
-      <Project>{caa4a84f-f603-403d-8dea-cea84e0540e4}</Project>
-      <Name>Cryptography</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
